Update README.md
Breakdown of where the application is as of 28/03/2022